@@ -22,6 +22,8 @@ version 0.47:
 	  to add them as well (Yahoo, ICQ, and MSN) (thanks Nathan Walp)
 	* Option to grey idle buddies (thanks Nathan Walp)
 	* MSN Privacy Options
+	* In MSN you can set a person's alias to their "friendly name" by
+	  right-click on their name while they're online.
 
 version 0.46 (10/18/2001):
 	* New applet icons (courtesy David Raeman)
